[package]
name = "sequence_trie"
version = "0.3.6"
description = "Trie-like data-structure for storing sequences of values."
edition = "2021"

license = "MIT/Apache-2.0"
authors = ["Michael Sproul <micsproul@gmail.com>", "Alex Gulyás <gulyas.alex@gmail.com>"]

documentation = "https://docs.rs/sequence_trie/"
repository = "https://github.com/michaelsproul/rust_sequence_trie"
readme = "README.md"

keywords = ["trie", "tree", "hash", "data-structure", "collection"]

[lib]
name = "sequence_trie"

[features]
btreemap = []
hasbrown = []

[dependencies]
serde = { version = "^1.0", optional = true, features = ["derive"] }
hashbrown = { version = "0.15", optional = true }

[dev-dependencies]
serde_json = "^1.0"

[[example]]
name = "json"
required-features = ["serde"]

[[example]]
name = "debug"
